--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
 /* Container first part ABOUT ME */
 .aboutContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: baseline;
   align-items: center;
   padding: 40px;
@@ -66,6 +67,7 @@ main {
 /* Container first part EXPERIENCE */
 .experienceContainer {
   display: flex;
+  flex-wrap: wrap;
   justify-content: baseline;
   align-items: center;
   padding: 40px;
@@ -161,4 +163,43 @@ footer {
   padding: 40px;
   background: black;
   color: white;
+}
+
+@media (max-width: 768px) {
+  .aboutContainer {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .aboutText {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  .aboutText img {
+    max-width: 90%;
+    margin-top: 20px;
+  }
+
+  .aboutContainer p {
+    text-align: center;
+  }
+  .experienceContainer {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .experienceText {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  .experienceText img {
+    max-width: 90%;
+    margin-top: 20px;
+  }
+
+  .experienceContainer p {
+    text-align: center;
+  }
 }
